Archive2/d1/3da2471b051d5d/output
main.cpp: In instantiation of 'T sized_ptr_cast(U) [with T = const unsigned char*; U = int*]':
main.cpp:21:56:   required from here
main.cpp:12:5: error: static assertion failed: size must be same
     static_assert(sizeof(typename std::remove_pointer<T>::type) == sizeof(typename std::remove_pointer<U>::type), "size must be same");
     ^
